--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import com.bmuschko.gradle.cargo.tasks.remote.CargoRedeployRemote
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -30,23 +30,28 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.restlet.jee:org.restlet:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.servlet:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.json:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.gson:2.3.6'
     implementation 'org.json:json:20160212'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'mysql:mysql-connector-java:8.0.16'
     implementation 'org.jooq:jooq:3.11.10'
     implementation 'org.jooq:jooq-codegen:3.11.10'
 
     implementation 'commons-io:commons-io:2.6'
+
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
+    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.34'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.34'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:2.34'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
+
+    // CORS wizardry
+    implementation 'com.thetransactioncompany:cors-filter:2.10'
 }
 
 // Generate a .war file
