- ADD: Added Plausible support.

--- a/config.template.properties
+++ b/config.template.properties
@@ -4,4 +4,8 @@ database.username=root
 database.password=
 database.port=
 
+plausible.hash.mode=
+plausible.domain=
+plausible.api.host=
+
 config.folder=
