--- a/build.gradle
+++ b/build.gradle
@@ -41,17 +41,17 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
 
-    providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
-    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.34'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.34'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:2.34'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
+    providedCompile 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:3.0.4'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.4'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
 
     // CORS wizardry
-    implementation 'com.thetransactioncompany:cors-filter:2.10'
+//    implementation 'com.thetransactioncompany:cors-filter:2.10'
 }
 
 // Generate a .war file
