--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,18 @@ group 'uk.ac.hutton.ics.gridscore'
 version '1.7.0'
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.json:json:20160212'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.json:json:20220320'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'mysql:mysql-connector-java:8.0.16'
+    implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.jooq:jooq:3.11.10'
     implementation 'org.jooq:jooq-codegen:3.11.10'
 
-    implementation 'commons-io:commons-io:2.6'
+    implementation 'commons-io:commons-io:2.11.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
@@ -50,8 +49,7 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.4'
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
 
-    // CORS wizardry
-//    implementation 'com.thetransactioncompany:cors-filter:2.10'
+    implementation 'org.apache.poi:poi-ooxml:5.2.2'
 }
 
 // Generate a .war file
