--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,12 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
 
-    providedCompile 'jakarta.servlet:jakarta.servlet-api:5.0.0'
-    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:3.0.4'
+    compileOnly 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
+
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.0.4'
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.4'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 }
