--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ group 'uk.ac.hutton.ics.gridscore'
 version '1.12.0'
 
 repositories {
+    maven {
+        url 'https://repo.osgeo.org/repository/release/'
+    }
     mavenCentral()
 }
 
@@ -52,6 +55,9 @@ dependencies {
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
+
+    implementation 'javax.media:jai_core:1.1.3'
+    implementation 'org.geotools:gt-shapefile:22.2'
 }
 
 // Generate a .war file
