--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ compileJava.options.encoding = 'UTF-8'
 sourceCompatibility = 11
 
 group 'uk.ac.hutton.ics.gridscore'
-version '1.14.0'
+version '1.15.0'
 
 repositories {
     maven {
@@ -33,26 +33,27 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testImplementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.5'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
     implementation 'org.json:json:20220320'
     implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'mysql:mysql-connector-java:8.0.29'
-    implementation 'org.jooq:jooq:3.11.10'
-    implementation 'org.jooq:jooq-codegen:3.11.10'
+    implementation 'org.jooq:jooq:3.16.18'
+    implementation 'org.jooq:jooq-codegen:3.16.18'
 
     implementation 'commons-io:commons-io:2.11.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 
-    compileOnly 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
+    providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
-    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.0.4'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.1'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
